@@ -1566,17 +1566,12 @@ void Magick::Image::type(const Magick::ImageType type_)
 
 Magick::ImageType Magick::Image::type(void) const
 {
-  ImageType
-    image_type;
-
-  image_type=constOptions()->type();
-  if (image_type == UndefinedType)
-    {
-      GetPPException;
-      image_type=GetImageType(constImage(),&exceptionInfo);
-      ThrowPPException;
-    }
-  return(image_type);
+  if (constOptions()->type() != UndefinedType)
+    return(constOptions()->type());
+  else if (constImage()->type != UndefinedType)
+    return(constImage()->type);
+  else
+    return(determineType());
 }
 
 void Magick::Image::verbose(const bool verboseFlag_)
@@ -2542,6 +2537,17 @@ void Magick::Image::despeckle(void)
   newImage=DespeckleImage(constImage(),&exceptionInfo);
   replaceImage(newImage);
   ThrowPPException;
+}
+
+Magick::ImageType Magick::Image::determineType(void) const
+{
+  ImageType
+    image_type;
+
+  GetPPException;
+  image_type=GetImageType(constImage(),&exceptionInfo);
+  ThrowPPException;
+  return(image_type);
 }
 
 void Magick::Image::display(void)
